chore(MemoCreate): move API parameters from header to body
